Revert embedded kotlin plugin workaround